	the multidata cache.  This fixes Savannah bug #46543.
	* src/color.c (reset_multis): Reset the multidata a bit less often.
	* src/color.c (reset_multis): Adjust whitespace and comments.
	* src/winio.c (edit_draw): When an end is found but nothing is painted
	(because the coloured part is horizontally scrolled off), nevertheless
	set the multidata to CBEGINBEFORE.  This fixes Savannah bug #46545.

2015-11-28  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (main): Allow the user full control over the values of
	MALLOC_CHECK_ and MALLOC_PERTURB_; nano shouldn't override these.
	This reverts r5344 from August 6.
	* src/nano.c (alloc_multidata_if_needed): When allocating a new
	multidata array, initialize the array.  Problem was betrayed by
	using MALLOC_PERTURB_, and was located with valgrind.

2015-11-26  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_redo): Not just the undoing, also the redoing of a
	Backspace at EOF is a special case.  This fixes Savannah bug #46532.
	* src/text.c (do_redo): Warn about an impossible condition, instead
	of blithely continuing.  And elide an unneeded variable.

2015-11-25  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (do_output): Refreshing the whole edit window (instead
	of just the current line) is not needed for any kind of syntax, but
	only when there are multiline regexes.  And check for this not on
	every keystroke in a burst, but just once.
	* src/text.c (do_undo): Warn about a condition that should never
	occur, instead of silently continuing.
	* src/text.c (do_undo): Elide an unneeded variable, and don't skip
	the end of this function when things went wrong.
	* src/text.c (do_undo, do_redo, add_undo, update_undo): Handle more
	possible internal errors, and do it correctly.
	* AUTHORS: Add Mark and myself.

2015-11-24  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/makefile.nanorc: Also recognize the extensions .make and